--- a/public/styles.css
+++ b/public/styles.css
@@ -36,7 +36,7 @@ footer p {
   color: #ccc;
 }
 .note {
-  background: #fff;
+  background-color: #fff;
   border-radius: 7px;
   box-shadow: 0 2px 5px #ccc;
   padding: 10px;
