--- a/public/stylesByMe.css
+++ b/public/stylesByMe.css
@@ -16,6 +16,7 @@ header {
   background-color: #f5ba13;
   margin: auto -16px;
   padding: 16px 32px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
 
 header h1 {
@@ -25,28 +26,31 @@ header h1 {
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   text-align: center;
   bottom: 0;
+  height: 2.5rem;
   width: 100%;
 }
 
-footer p{
+footer p {
   color: #ccc;
 }
 
 .note {
   background-color: #fff;
   width: 240px;
+  position: relative;
   margin: 20px;
   padding: 10px;
   border-radius: 7px;
-  box-shadow: 5px 5px 10px #ccc;
+  box-shadow: 0px 2px 5px #ccc;
   float: left;
 }
 
 .note h1 {
-  font-size: 20px;
+  font-size: 1.1em;
+  font-family: "Nunito", sans-serif;
   margin-bottom: 8px;
 }
 
@@ -54,5 +58,59 @@ footer p{
   font-size: 1.1em;
   margin-bottom: 10px;
   word-wrap: break-word;
+  margin-bottom: 20px;
   white-space: pre-wrap;
+}
+
+.note button {
+  color: #f5ba13;
+  opacity: 80%;
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  outline: none;
+  font-size: 0.8rem;
+  cursor: pointer;
+  font-weight: 700;
+  border: none;
+}
+
+form {
+  background-color: #fff;
+  border-radius: 7px;
+  box-shadow: 0 1px 5px rgb(138, 137, 137);
+  margin: auto;
+  width: 30%;
+  margin: 20px auto;
+  padding: 15px;
+  position: relative;
+  text-align: center;
+  box-shadow: 0px 2px 5px #ccc;
+}
+
+form input,
+form textarea {
+  width: 100%;
+  border: none;
+  outline: none;
+  resize: none;
+  font-size: 1.2rem;
+  padding: 4px;
+  font-family: inherit;
+}
+
+form button {
+  background: #f5ba13;
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  bottom: -10px;
+  font-family: inherit;
+  right: 10px;
+  color: #fff;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
